фиксит разметку и стили для photo.html

--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Пинк: Главная</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -35,31 +36,34 @@
 
     <main class="page-main">
 
-      <section class="intro">
+      <section class="page-main__intro intro">
         <div class="intro__wrapper intro__wrapper--index-page">
           <h1 class="intro__page-title visually-hidden">Пинк</h1>
-          <h2 class="intro__title visually-hidden">Ссылки для скачивания</h2>
-          <p class="intro__slogan">Взгляните на жизнь иначе!</p>
 
-          <a class="intro__main-link button button--download" href="https://www.apple.com/ru/ios/app-store/">Скачать приложение</a>
-          <ul class="intro__list list">
-            <li class="intro__item">
-  <!--            <a href="https://www.apple.com/ru/ios/app-store/">-->
-  <!--              <img class="download__img list__img--app-store" src="https://via.placeholder.com/47x56" alt="Приложение Пинк в App Store.">-->
-  <!--            </a>-->
-            </li>
-            <li class="intro__item">
-  <!--            <a href="https://play.google.com/store/apps?hl=ru">-->
-  <!--              <img class="download__img list__img--google-play" src="https://via.placeholder.com/43x47" alt="Приложениие Пинк в Google Play.">-->
-  <!--            </a>-->
-            </li>
-            <li class="intro__item">
-  <!--            <a href="https://www.microsoft.com/ru-ru/store/apps/windows">-->
-  <!--              <img class="download__img list__img--windows-store" src="https://via.placeholder.com/43x47" alt="Приложение Пинк в Windows Store.">-->
-  <!--            </a>-->
-            </li>
-          </ul>
-          <p class="intro__legend">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          <div class="intro__download-links-wrapper">
+            <h2 class="intro__title visually-hidden">Ссылки для скачивания</h2>
+            <p class="intro__slogan">Взгляните на жизнь иначе!</p>
+
+            <a class="intro__main-link button button--download" href="https://www.apple.com/ru/ios/app-store/">Скачать приложение</a>
+            <ul class="intro__list list">
+              <li class="intro__item">
+    <!--            <a href="https://www.apple.com/ru/ios/app-store/">-->
+    <!--              <img class="download__img list__img--app-store" src="https://via.placeholder.com/47x56" alt="Приложение Пинк в App Store.">-->
+    <!--            </a>-->
+              </li>
+              <li class="intro__item">
+    <!--            <a href="https://play.google.com/store/apps?hl=ru">-->
+    <!--              <img class="download__img list__img--google-play" src="https://via.placeholder.com/43x47" alt="Приложениие Пинк в Google Play.">-->
+    <!--            </a>-->
+              </li>
+              <li class="intro__item">
+    <!--            <a href="https://www.microsoft.com/ru-ru/store/apps/windows">-->
+    <!--              <img class="download__img list__img--windows-store" src="https://via.placeholder.com/43x47" alt="Приложение Пинк в Windows Store.">-->
+    <!--            </a>-->
+              </li>
+            </ul>
+            <p class="intro__legend">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
         </div>
       </section>
 
