--- a/source/form.html
+++ b/source/form.html
@@ -2,39 +2,40 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Пинк: Конкурс</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-    <div class="page-header__wrapper">
-      <div class="page-header__logo-toggle-wrapper">
-        <a class="page-header__logo-link" href="index.html">
-          <!--          <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">-->
-        </a>
-        <button class="page-header__toggle" type="button"></button>
+      <div class="page-header__wrapper">
+        <div class="page-header__logo-toggle-wrapper">
+          <a class="page-header__logo-link" href="index.html">
+            <!--          <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">-->
+          </a>
+          <button class="page-header__toggle" type="button"></button>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item site-list__item--current">
+              <a class="site-list__link">Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a class="site-list__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item site-list__item--current">
-            <a class="site-list__link">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    </header>
 
     <main class="page-main">
-      <section class="intro">
+      <section class="page-main__intro intro">
         <div class="intro__wrapper">
           <h1 class="intro__page-title">Конкурс на самое безбашенное путешествие с Пинк</h1>
         </div>
