--- a/source/photo.html
+++ b/source/photo.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Пинк: Фотографии</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -34,7 +35,7 @@
     </header>
 
     <main class="page-main">
-      <section class="intro">
+      <section class="page-main__intro intro">
         <div class="intro__wrapper">
           <h1 class="intro__page-title">Фотографии пользователей</h1>
         </div>
@@ -46,24 +47,24 @@
           <p class="cards__slogan">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
           <ul class="cards__list list">
             <li class="cards__item cards__item--panorama-of-the-day">
-              <article class="cards__post-content post-content">
+              <article class="cards__post-content post-content post-content--panorama-of-the-day">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo post-content__photo--panorama-of-the-day" src="https://via.placeholder.com/1200x506" width="1200" height="506" alt="Панорамный вид на холмы с моста.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/660x509" width="660" height="509" alt="Панорамный вид на холмы с моста.">
 <!--                  <img class="post-content__photo post-content__photo&#45;&#45;panorama-of-the-day" src="https://via.placeholder.com/320x137" width="320" height="137" alt="Панорамный вид на холмы с моста.">-->
                 </a>
-                <div class="post-content__text post-content__text--panorama-of-the-day">
+                <div class="post-content__text">
                   <p class="post-content__user">Анна <span class="post-content__posting-time">(5 минут назад)</span></p>
                   <p class="post-content__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои</p>
-                  <p class="post-content__likes post-content__likes--panorama-of-the-day">Нравится: 215</p>
+                  <p class="post-content__likes">Нравится: 215</p>
                 </div>
               </article>
             </li>
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Белая машина у темной стены и штатив для камеры на переднем плане.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Белая машина у темной стены и штатив для камеры на переднем плане.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Левон <span class="post-content__posting-time">(5 часов назад)</span></p>
@@ -75,8 +76,8 @@
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Барабанная установка с подключенными микрофонами.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Барабанная установка с подключенными микрофонами.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Антон <span class="post-content__posting-time">(12 часов назад)</span></p>
@@ -88,8 +89,8 @@
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Вид неба через прозрачную крышу небоскреба.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Вид неба через прозрачную крышу небоскреба.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Борис <span class="post-content__posting-time">(20 часов назад)</span></p>
@@ -101,8 +102,8 @@
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Продажа дынь и арбусов на кубанской бахче.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Продажа дынь и арбусов на кубанской бахче.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Сергей <span class="post-content__posting-time">(25 часов назад)</span></p>
@@ -114,8 +115,8 @@
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Вид с вершины горы вниз с ногами фотографирующего.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Вид с вершины горы вниз с ногами фотографирующего.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Максим <span class="post-content__posting-time">(40 часов назад)</span></p>
@@ -127,8 +128,8 @@
             <li class="cards__item">
               <article class="cards__post-content post-content">
                 <h3 class="visually-hidden">Пост с фотографией</h3>
-                <a href="#" class="post-content__photo-link">
-                  <img class="post-content__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Крыло самолета в воздухе на фоне яркого Солнца.">
+                <a class="post-content__photo-link" href="#">
+                  <img class="post-content__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Крыло самолета в воздухе на фоне яркого Солнца.">
                 </a>
                 <div class="post-content__text">
                   <p class="post-content__user">Надежда <span class="post-content__posting-time">(45 часов назад)</span></p>
@@ -148,34 +149,34 @@
         </div>
         <div class="upload__editing-wrapper">
           <form class="upload__editing editing" action="https://echo.htmlacademy.ru" method="post">
-            <img class="editing__photo" src="https://via.placeholder.com/300x400" width="300" height="400" alt="Заснеженная дорога в лесу">
+            <img class="editing__photo" src="https://via.placeholder.com/300x300" width="300" height="300" alt="Заснеженная дорога в лесу">
             <div class="editing__input-wrapper">
               <input class="editing__radio editing__radio--crop" id="editing-crop" name="editing-slider" type="radio" checked>
               <input class="editing__radio editing__radio--fill" id="editing-fill" name="editing-slider" type="radio">
               <input class="editing__radio editing__radio--contrast" id="editing-contrast" name="editing-slider" type="radio">
               <ul class="editing__list list">
-                <li class="editing__element editing__element--crop">
+                <li class="editing__element">
                   <label class="editing__label" for="editing-crop">
-                    <img class="editing__icon editing__icon--crop" src="https://via.placeholder.com/44x44" width="44" height="44" alt="">
+                    <img class="editing__icon" src="https://via.placeholder.com/22x22" width="22" height="22" alt="">
+                    <input class="editing__range editing__range--crop" name="crop-value" type="range">
                   </label>
                 </li>
-                <li class="editing__element editing__element--fill">
+                <li class="editing__element">
                   <label class="editing__label" for="editing-fill">
-                    <img class="editing__icon editing__icon--fill" src="https://via.placeholder.com/44x44" width="44" height="44" alt="">
+                    <img class="editing__icon" src="https://via.placeholder.com/22x22" width="22" height="22" alt="">
+                    <input class="editing__range editing__range--fill" name="fill-value" type="range">
                   </label>
                 </li>
-                <li class="editing__element editing__element--contrast">
+                <li class="editing__element">
                   <label class="editing__label" for="editing-contrast">
-                    <img class="editing__icon editing__icon--contrast" src="https://via.placeholder.com/44x44" width="44" height="44" alt="">
+                    <img class="editing__icon" src="https://via.placeholder.com/22x22" width="22" height="22" alt="">
+                    <input class="editing__range editing__range--contrast" name="contrast-value" type="range">
                   </label>
                 </li>
               </ul>
-              <input class="editing__range editing__range--crop" name="crop-value" type="range">
-              <input class="editing__range editing__range--fill" name="fill-value" type="range">
-              <input class="editing__range editing__range-contrast" name="contrast-value" type="range">
               <div class="editing__buttons-wrapper">
-                <button class="editing__button editing__button--post button button--post" type="submit">Запостить</button>
-                <button class="editing__button editing__button--reset button button--reset" type="reset">Отмена</button>
+                <button class="editing__button button button--post" type="submit">Запостить</button>
+                <button class="editing__button button button--reset" type="reset">Отмена</button>
               </div>
             </div>
           </form>
