фиксит разметку подвала

--- a/source/index.html
+++ b/source/index.html
@@ -248,10 +248,10 @@
             </a>
           </li>
         </ul>
-        <div class="page-footer__copyright">
-          <span class="page-footer__made-by">Разработано</span>
-          <a class="page-footer__logo-link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img class="page-footer__logo-link" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__html-academy-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="copyright__made-by">Разработано</span>
+            <img class="copyright__html-academy-logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy.">
           </a>
         </div>
       </div>
