--- a/source/form.html
+++ b/source/form.html
@@ -8,31 +8,31 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__wrapper">
-        <div class="page-header__logo-toggle-wrapper">
-          <a class="page-header__logo-link" href="index.html">
-            <!--          <img class="page-header__logo-image" src="https://via.placeholder.com/74x23" width="74" height="23" alt="Логотип Пинка.">-->
+    <div class="page-header__wrapper">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <div class="main-nav__logo-toggle-wrapper">
+          <a class="main-nav__logo-link">
+            <img class="main-nav__logo-image" src="img/logo-pink-white-tablet.svg" width="146" height="40" alt="Логотип Пинка.">
           </a>
-          <button class="page-header__toggle" type="button"></button>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
-        <nav class="main-nav">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link" href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="photo.html">Фотографии</a>
-            </li>
-            <li class="site-list__item site-list__item--current">
-              <a class="site-list__link">Конкурс</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="photo.html">Фотографии</a>
+          </li>
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
     <main class="page-main">
       <section class="page-main__intro intro">
@@ -164,27 +164,31 @@
         <ul class="page-footer__social list">
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
-              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+              <img src="https://via.placeholder.com/18x14" width="18" height="14" alt="">
             </a>
           </li>
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--facebook" href="https://www.facebook.com/htmlacademy">
-              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+              <img src="https://via.placeholder.com/9x18" width="9" height="18" alt="">
             </a>
           </li>
           <li class="page-footer__item">
             <a class="page-footer__link page-footer__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">
-              <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="">
+              <img src="https://via.placeholder.com/15x13" width="15" height="13" alt="">
             </a>
           </li>
         </ul>
         <div class="page-footer__copyright copyright">
           <a class="copyright__html-academy-link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__made-by">Разработано</span>
-            <img class="copyright__html-academy-logo" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy.">
+            <!--            <img class="copyright__html-academy-logo" src="img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy.">-->
+            <svg class="copyright__html-academy-logo" width="27" height="34" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+              <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+            </svg>
           </a>
         </div>
       </div>
     </footer>
   </body>
+  <script src="js/main.js"></script>
 </html>
